2000-03-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* ports.h (scm_port):  Change type of stream member to scm_bits_t.

	* gdbint.c (unmark_port, remark_port), ports.c (scm_markstream),
	strports.c (st_resize_port, scm_mkstrport), vports (sf_flush,
	sf_write, sf_fill_input, sf_close, scm_make_soft_port):  Since
	streams are now of type scm_bits_t, SCM streams have to be
	unpacked/packed.

	* ports.h (SCM_SETPTAB_ENTRY, SCM_SETSTREAM):  Cast input to
	scm_bits_t.

2000-03-31  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* coop-defs.h (struct coop_t): Added `sto'-field again because of
	binary compatibility---let's remove it next time we alter some
	major structure.

	* coop.c (coop_quitting_p, coop_cond_create, coop_mutex_create,
	coop_mother, coop_child): New variables.
	(mother): New function.
	(coop_create): New thread spawning mechanism which uses a "mother
	thread".  The "dummy" pthreads aren't healthy enough to give birth
	to new threads since Linux threads thinks they are asleep.

	* coop-defs.h (struct coop_t): Removed dummy_mutex.

	* coop-defs.h, coop-threads.c (struct coop_t): Eliminate
	`sto'-field when GUILE_PTHREAD_COMPAT is enabled.

2000-03-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* arbiters.c (scm_make_arbiter), async.c (scm_async), dynwind.c
	(scm_internal_dynamic_wind):  Smob data is always of type
	scm_bits_t.

	* arbiters.c (SCM_ARB_LOCKED, SCM_LOCK_ARB, SCM_UNLOCK_ARB):
	Access the locking information in cell entry 0 with
	SCM_{SET_}?CELL_WORD_0 instead of SCM_*CAR.

	* async.c (scm_run_asyncs):  Use SCM_NULLP to test for the empty
	list.

	* dynwind.c (scm_dowinds):  Use SCM_EQ_P to compare SCM values.

	* ports.h (SCM_PTAB_ENTRY, SCM_SETPTAB_ENTRY):  Access the ptab
	entry data using SCM_{SET_}?CELL_WORD_1 instead of SCM_{SET}?CDR.

2000-03-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* alist.c (scm_sloppy_assq, scm_assq), eq.c (scm_eq_p, scm_eqv_p,
	scm_equal_p), list.c (scm_ilength, scm_last_pair, scm_reverse,